# IDoCrypto

./: README.md
defines/: app_error_codes.h
idocrypto/: CMakeLists.txt
idocrypto/include/: idocrypto.h
idocrypto/src/: idocrypto.c  main.c
idocrypto/test/test_sha256/: project.yml
tools/include/: dump.h
tools/src/: dump.c
